 (Format: Year/Month/Day)
Changes for 1.0rc3:
*06/07/05:
   * Fix crash on startup on some platforms (Simon)
     FbTk/FbString.cc
*06/07/04:
   * Fix some sizing issues from gravity change patch (Simon)
     FbWinFrame.hh/cc Window.cc
   * Auto-grouped windows using groups file didn't raise (Thanks ac2dc, bug
     #1449608)
     Workspace.cc
   * New windows don't steal focus from fullscreen windows; instead, flash the
     titlebar and iconbar button (Mark)
     Window.cc
*06/07/03:
   * fix+improve handling of window gravity, was very broken (Simon)
     - caused (among others) windows with gravity set to get relocated 
       on close.
     - gravity is now taken into account on style change
     FbWinFrame.hh/cc Window.hh/cc Ewmh.cc
   * make our default locale, init, menu, and style paths properly
     expand PREFIX in the make install stage, so that make prefix=elsewhere
     works properly (Simon)
     configure.in
Changes for 1.0rc2:
*06/07/03:
   * call waitpid() on SIGCHLD until no more children (thanks Devin/dlab)
     sf.net #1514843, #1447782 - fluxbox leaves zombies
     fluxbox.cc
*06/07/02:
   * Updated documentation (Mark)
*06/06/29:
   * Make fbsetroot set one screen at a time (Mark)
     util/fbsetroot.cc/hh
   * Fix fbsetroot segfault when DISPLAY is unset (Mark)
     util/fbsetroot.cc
*06/06/28:
   * Linear cycling wasn't affecting normal cycling order (Mark)
     WorkspaceCmd.cc
   * Little cleanup of dead functions (Mark)
     Workspace.cc/hh
   * Fixed more focus issues with linear cycling and tabbed windows (Mark)
     Window.cc FocusControl.cc Screen.cc
   * Fixed some focus issues on detach and restart (Mark)
     Window.cc FocusControl.cc/hh Screen.cc
*06/06/27:
   * Some minor cleaning (thanks Slava Semushin + Mikhail Gusarov)
     FbTk/StringUtil.hh/cc Remember.cc
   * Fix slit menu so it closes when you press escape (Mark)
     Slit.cc
*06/06/26:
   * Fix _NET_FRAME_EXTENTS implementation (Simon)