@@ -1365,11 +1365,10 @@ FluxboxWindow *BScreen::createWindow(Window client) {
                 
     // always put on end of focused list, if it gets focused it'll get pushed up
     // there is only the one win client at this stage
+    focusControl().addFocusBack(*winclient);
     if (focusControl().focusNew())
-        focusControl().addFocusFront(*winclient);
-    else            
-        focusControl().addFocusBack(*winclient);
- 
+        FocusControl::setFocusedWindow(winclient);
+
     // we also need to check if another window expects this window to the left
     // and if so, then join it.
     FluxboxWindow *otherwin = 0;
@@ -1406,6 +1405,9 @@ FluxboxWindow *BScreen::createWindow(WinClient &client) {
         delete win;
         return 0;
     }
+
+    if (focusControl().focusNew() || FocusControl::focusedWindow() == &client)
+        FocusControl::setFocusedWindow(&client);
 
     m_clientlist_sig.notify();
 
